# homelab

./: .gitignore  AGENTS.md  README.md
cloud_backup/: .env.example  DIRECTORY_STRUCTURE.md  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  setup.sh
cloud_backup/app/: __init__.py  api_server.py  configuration.py  engine_server.py  http_utils.py  operation_cli.py  operations.py  runtime.py  scheduler.py
cloud_backup/scripts/: backup.sh  backup_status.sh  diagnose_server.sh  healthcheck.sh  notify.sh  preflight.sh  restore.sh  resume_backup.sh  update_server_sources.sh
cloud_backup/tests/: test_config.py  test_imports.py  test_operations.py  test_scheduler.py
cloud_backup/web/: app.js  index.html  nginx.conf  styles.css
context/: .context-mesh-framework.md
context/decisions/: 001-tech-stack.md  002-cloud-backup-architecture.md  003-netpulse-monitoring-approach.md  004-disk-health-monitoring.md  005-safety-gate-pattern.md  006-preflight-cache.md  007-restore-and-download.md
context/evolution/: changelog.md
disk-health/: README.md  disk-alert.conf  disk-health.service  disk-health.sh  disk-health.timer  smart-selftest-short.service  smart-selftest-short.sh  smart-selftest-short.timer  telegram-bot.service  telegram-bot.sh  telegram-bot.timer  update_install.sh
localsend/: Dockerfile  docker-compose.yml  start.sh
netpulse/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
tailscale/: .env.example  README.md  docker-compose.yml
tailscale_isolated/: .env.example  docker-compose.yml  env.example
(+17 files in other folders)
